--- a/en/index.html
+++ b/en/index.html
@@ -1,1 +1,1 @@
-<!doctype html><html><head><title>https://www.covidshield.app/</title><link rel=canonical href=https://www.covidshield.app/><meta name=robots content="noindex"><meta charset=utf-8><meta http-equiv=refresh content="0; url=https://www.covidshield.app/"></head></html>
+<!DOCTYPE html><html><head><title>https://gendosoft.github.io/</title><link rel="canonical" href="https://gendosoft.github.io/"/><meta name="robots" content="noindex"><meta charset="utf-8" /><meta http-equiv="refresh" content="0; url=https://gendosoft.github.io/" /></head></html>
